updated docker 7.0 error

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,131 +6,129 @@ trigger:
 
 variables:
   imageName: azdevops-cicd-sample
-  azureSubscription: AzureSubscriptionConnection   
+  azureSubscription: AzureSubscriptionConnection
   acrName: nithinkatruacr
   rgName: ci-cd-rg
-  location: eastus
-  appServicePlan: cicd-plan
-  webAppName: "cicd-webapp-$(Build.SourceBranchName)"
-  tfStateStorageAccount: tfstateYourSuffix
-  tfStateContainer: tfstate
   sonarOrg: akhil-mano52020
 
 stages:
-  - stage: Build
-    displayName: 'CI: Build, Test & Sonar'
-    jobs:
-      - job: Build
-        displayName: 'Self‑Hosted Build'
-        pool:
-          name: LocalSelfHostedPool1
-          demands:
-            - agent.os -equals Windows_NT
-        steps:
-          - checkout: self
-            persistCredentials: true
+- stage: Build
+  displayName: 'CI: Build, Test & Sonar'
+  jobs:
+  - job: Build
+    displayName: 'Self-Hosted Build'
+    pool:
+      name: LocalSelfHostedPool1
+      demands:
+        - agent.os -equals Windows_NT
+    steps:
+    - checkout: self
+      persistCredentials: true
 
-          # — Login to ACR using PowerShell on Windows —
-          - task: AzureCLI@2
-            displayName: 'Login to ACR'
-            inputs:
-              azureSubscription: '$(azureSubscription)'
-              scriptType: ps
-              scriptLocation: inlineScript
-              inlineScript: |
-                az acr login --name $(acrName)
+    # Log in to ACR
+    - task: AzureCLI@2
+      displayName: 'Login to ACR'
+      inputs:
+        azureSubscription: '$(azureSubscription)'
+        scriptType: ps
+        scriptLocation: inlineScript
+        inlineScript: |
+          az acr login --name $(acrName)
 
-          - task: NodeTool@0
-            inputs:
-              versionSpec: '14.x'
+    # Node install / lint / test
+    - task: NodeTool@0
+      displayName: 'Use Node.js 14'
+      inputs:
+        versionSpec: '14.x'
 
-          - script: npm install
-            displayName: 'Install dependencies'
+    - script: npm install
+      displayName: 'Install dependencies'
+      workingDirectory: $(Build.SourcesDirectory)
 
-          - script: npm run lint
-            displayName: 'Lint code'
+    - script: npm run lint
+      displayName: 'Lint code'
+      workingDirectory: $(Build.SourcesDirectory)
 
-          - script: npm test
-            displayName: 'Run tests'
+    - script: npm test
+      displayName: 'Run tests'
+      workingDirectory: $(Build.SourcesDirectory)
 
-          - script: |
-              docker build \
-                -t $(acrName).azurecr.io/$(imageName):$(Build.BuildId) \
-                .
-            displayName: 'Build Docker image'
+    # Build image from repo root
+    - script: |
+        docker build -t $(acrName).azurecr.io/$(imageName):$(Build.BuildId) .
+      displayName: 'Build Docker image'
+      workingDirectory: $(Build.SourcesDirectory)
 
-          - task: Docker@2
-            displayName: 'Push image to ACR'
-            inputs:
-              command: push
-              repository: $(acrName).azurecr.io/$(imageName)
-              tags: $(Build.BuildId)
+    # Push image (uses the ACR login above)
+    - script: |
+        docker push $(acrName).azurecr.io/$(imageName):$(Build.BuildId)
+      displayName: 'Push image to ACR'
+      workingDirectory: $(Build.SourcesDirectory)
 
-          # === SonarCloud analysis (v3 tasks) ===
-          - task: SonarCloudPrepare@3
-            displayName: 'Prepare SonarCloud analysis'
-            inputs:
-              SonarCloud: 'SonarCloud'         
-              organization: '$(sonarOrg)'
-              scannerMode: 'CLI'
-              configMode: 'manual'
-              cliProjectKey: 'azdevops-cicd-sample'
-              cliProjectName: 'CI-CD Sample'
+    # SonarCloud v3
+    - task: SonarCloudPrepare@3
+      displayName: 'Prepare SonarCloud analysis'
+      inputs:
+        SonarCloud: 'SonarCloud'
+        organization: '$(sonarOrg)'
+        scannerMode: 'CLI'
+        configMode: 'manual'
+        cliProjectKey: 'azdevops-cicd-sample'
+        cliProjectName: 'CI-CD Sample'
 
-          - task: SonarCloudAnalyze@3
-            displayName: 'Run SonarCloud analysis'
+    - task: SonarCloudAnalyze@3
+      displayName: 'Run SonarCloud analysis'
 
-          - task: SonarCloudPublish@3
-            displayName: 'Publish SonarCloud Quality Gate'
+    - task: SonarCloudPublish@3
+      displayName: 'Publish SonarCloud Quality Gate'
 
-          - publish: $(Build.ArtifactStagingDirectory)
-            artifact: drop
+    - publish: $(Build.ArtifactStagingDirectory)
+      artifact: drop
 
-  - stage: Deploy
-    displayName: 'CD: Terraform + WebApp Deploy'
-    dependsOn: Build
-    jobs:
-      - deployment: Deploy
-        displayName: 'Terraform + WebApp Deploy'
-        environment: '$(Build.SourceBranchName)'
-        pool:
-          vmImage: 'ubuntu-latest'
-        strategy:
-          runOnce:
-            deploy:
-              steps:
-                - checkout: self
+- stage: Deploy
+  displayName: 'CD: Terraform + WebApp Deploy'
+  dependsOn: Build
+  jobs:
+  - deployment: Deploy
+    displayName: 'Terraform + WebApp Deploy'
+    environment: '$(Build.SourceBranchName)'
+    pool:
+      vmImage: 'ubuntu-latest'
+    strategy:
+      runOnce:
+        deploy:
+        - checkout: self
 
-                - task: TerraformInstaller@0
-                  displayName: 'Install Terraform'
-                  inputs:
-                    terraformVersion: '1.0.0'
+        - task: TerraformInstaller@0
+          displayName: 'Install Terraform'
+          inputs:
+            terraformVersion: '1.0.0'
 
-                - task: TerraformTaskV1@0
-                  displayName: 'Terraform Init'
-                  inputs:
-                    provider: 'azurerm'
-                    command: 'init'
-                    workingDirectory: 'terraform'
-                    backendServiceArm: '$(azureSubscription)'
-                    backendAzureRmResourceGroupName: '$(rgName)'
-                    backendAzureRmStorageAccountName: '$(tfStateStorageAccount)'
-                    backendAzureRmContainerName: '$(tfStateContainer)'
-                    backendAzureRmKey: 'terraform.tfstate'
+        - task: TerraformTaskV1@0
+          displayName: 'Terraform Init'
+          inputs:
+            provider: 'azurerm'
+            command: 'init'
+            workingDirectory: 'terraform'
+            backendServiceArm: '$(azureSubscription)'
+            backendAzureRmResourceGroupName: '$(rgName)'
+            backendAzureRmStorageAccountName: '$(tfStateStorageAccount)'
+            backendAzureRmContainerName: '$(tfStateContainer)'
+            backendAzureRmKey: 'terraform.tfstate'
 
-                - task: TerraformTaskV1@0
-                  displayName: 'Terraform Apply'
-                  inputs:
-                    provider: 'azurerm'
-                    command: 'apply'
-                    environmentServiceName: '$(azureSubscription)'
-                    workingDirectory: 'terraform'
-                    args: '-auto-approve -var "environment=$(Build.SourceBranchName)"'
+        - task: TerraformTaskV1@0
+          displayName: 'Terraform Apply'
+          inputs:
+            provider: 'azurerm'
+            command: 'apply'
+            environmentServiceName: '$(azureSubscription)'
+            workingDirectory: 'terraform'
+            args: '-auto-approve -var "environment=$(Build.SourceBranchName)"'
 
-                - task: AzureWebAppContainer@1
-                  displayName: 'Deploy to Azure Web App'
-                  inputs:
-                    azureSubscription: '$(azureSubscription)'
-                    resourceGroupName: '$(rgName)'
-                    appName: '$(webAppName)'
-                    imageName: '$(acrName).azurecr.io/$(imageName):$(Build.BuildId)'
+        - task: AzureWebAppContainer@1
+          displayName: 'Deploy to Azure Web App'
+          inputs:
+            azureSubscription: '$(azureSubscription)'
+            resourceGroupName: '$(rgName)'
+            appName: '$(webAppName)'
+            imageName: '$(acrName).azurecr.io/$(imageName):$(Build.BuildId)'
