--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,19 +1,16 @@
 trigger:
   branches:
-    include:
-      - main
-      - develop
+    include: [ main, develop ]
 
 variables:
   imageName: azdevops-cicd-sample
   azureSubscription: AzureSubscriptionConnection
   acrName: nithinkatruacr
   rgName: ci-cd-rg
-  tfStateStorageAccount: tfstateYourSuffix      # update to real SA
+  tfStateStorageAccount: tfstateYourSuffix
   tfStateContainer: tfstate
   sonarOrg: akhil-mano52020
 
-# ───────────────────────────  BUILD / TEST / PUSH  ───────────────────────────
 stages:
 - stage: Build
   displayName: 'CI: Build, Test & Sonar'
@@ -22,13 +19,11 @@ stages:
     displayName: 'Self-Hosted Windows Build'
     pool:
       name: LocalSelfHostedPool1
-      demands:
-        - agent.os -equals Windows_NT
+      demands: [ agent.os -equals Windows_NT ]
     steps:
     - checkout: self
       persistCredentials: true
 
-    # 1 — log in to ACR
     - task: AzureCLI@2
       displayName: 'Login to ACR'
       inputs:
@@ -38,25 +33,18 @@ stages:
         inlineScript: |
           az acr login --name $(acrName)
 
-    # 2 — Node install / lint / test
     - task: NodeTool@0
       displayName: 'Use Node.js 14'
-      inputs:
-        versionSpec: '14.x'
+      inputs: { versionSpec: '14.x' }
 
-    - script: npm install
+    - script: npm ci
       displayName: 'Install dependencies'
-      workingDirectory: $(Build.SourcesDirectory)
-
-    - script: npm run lint
-      displayName: 'Lint code'
       workingDirectory: $(Build.SourcesDirectory)
 
     - script: npm test
       displayName: 'Run tests'
       workingDirectory: $(Build.SourcesDirectory)
 
-    # 3 — build & push Docker image
     - task: PowerShell@2
       displayName: 'Build & push Docker image'
       inputs:
@@ -66,14 +54,15 @@ stages:
           docker build -t $(acrName).azurecr.io/$(imageName):$(Build.BuildId) .
           docker push  $(acrName).azurecr.io/$(imageName):$(Build.BuildId)
 
-    # 3½ — ensure Java 17 for Sonar scanner
-    - task: UseJava@1
-      displayName: 'Use Temurin 17'
+    # ── install / select Temurin 17 for Sonar scanner ──
+    - task: JavaToolInstaller@0
+      displayName: 'Install Temurin 17'
       inputs:
         versionSpec: '17'
-        architecture: 'x64'
+        jdkArchitectureOption: x64
+        jdkSourceOption: PreInstalled
 
-    # 4 — SonarCloud analysis
+    # SonarCloud v3
     - task: SonarCloudPrepare@3
       displayName: 'Prepare SonarCloud analysis'
       inputs:
@@ -93,26 +82,22 @@ stages:
     - publish: $(Build.ArtifactStagingDirectory)
       artifact: drop
 
-# ───────────────────────────────  DEPLOY  ────────────────────────────────────
-- stage: Deploy
+- stage: Deploy                      # unchanged
   displayName: 'CD: Terraform + WebApp Deploy'
   dependsOn: Build
   jobs:
   - deployment: Deploy
     displayName: 'Terraform + WebApp'
     environment: $(Build.SourceBranchName)
-    pool:
-      vmImage: ubuntu-latest
+    pool: { vmImage: ubuntu-latest }
     strategy:
       runOnce:
         deploy:
           steps:
           - checkout: self
-
           - task: TerraformInstaller@0
             displayName: 'Install Terraform'
-            inputs:
-              terraformVersion: 1.0.0
+            inputs: { terraformVersion: 1.0.0 }
 
           - task: TerraformTaskV1@0
             displayName: 'Terraform Init'
