updated docker 8.0 error

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ variables:
   rgName: ci-cd-rg                                    # Resource group for WebApp
   tfStateStorageAccount: tfstateYourSuffix            # Remote state storage
   tfStateContainer: tfstate                           # Remote state container
-  sonarOrg: akhil-mano52020                           # SonarCloud organisation
+  sonarOrg: akhilmano1                         # SonarCloud organisation
 
 # ---------------------------------------------------------------------------#
 #  CI  ─ Build / Test / Lint / Sonar / Push image                            #
